fixed some small bugs, added Item class

--- a/SoftEtherVPNCmdNET/SoftEtherVPNCmdNET.csproj
+++ b/SoftEtherVPNCmdNET/SoftEtherVPNCmdNET.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Nic.cs" />
     <Compile Include="VpnCmd.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
